crates/dishaster-trial/tests/snapshots/trial__296566311008aaa4.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 2982902689111255716
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 113
        text: "就这半只[帝王蟹]还999元？\\壳都比肉多，\\你们当学生是提款机啊！"
        emotion: 😤
        gesture: 👎
        topic: crab
    response_options:
      - speech_id: 113
        keywords:
          - keyword: 帝王蟹
            options:
              - id: 281
                kind: question
                summary: 觉得贵？
    selected_response:
      speech_id: 113
      keyword_idx: 0
      option_idx: 0
    manager_speeches:
      - id: 281
        summary: 觉得贵？
        text: "您之前吃过类似的帝王蟹吗？\\可以对比一下品质和分量。"
        emotion: 🙂
        gesture: 🤝
    impact:
      reputation_score: -0.5
      mood_change: -0.05
      trust_change: -0.025
      patience_change: -1
    continuation_decision: true
  - turn_number: 2
    diner_speeches:
      - id: 119
        text: "我觉得上[帝王蟹]挺好的，\\学校餐厅也能吃到高端 seafood，\\说明食堂在进步啊！"
        emotion: 😊
        gesture: 👍
        topic: crab
    response_options:
      - speech_id: 119
        keywords:
          - keyword: 帝王蟹
            options:
              - id: 310
                kind: perjury
                summary: 扶贫项目
              - id: 282
                kind: perjury
                summary: 学校定价
              - id: 312
                kind: objection
                summary: 市场规律
              - id: 283
                kind: agreement
                summary: 听取意见
    selected_response:
      speech_id: 119
      keyword_idx: 0
      option_idx: 2
    manager_speeches:
      - id: 312
        summary: 市场规律
        text: "高端食材本就价格高，\\就像有人买奢侈品，有人穿平价服装。"
        emotion: 😑
        gesture: 👆
    impact:
      reputation_score: -0.5
      mood_change: -0.05
      trust_change: -0.025
      patience_change: -1
    continuation_decision: false
final_state:
  total_turns: 2
  asked_questions:
    - 113
    - 119
  continuation_depth: 0
