crates/dishaster-trial/tests/snapshots/trial__939e7abb81f5d5fc.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 10637074315653535228
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 44
        text: "这盒[便当]盖子内有油渍，\\看着就不卫生，\\我不敢吃了。"
        emotion: 😭
        gesture: 🤙
        topic: hygiene
      - id: 77
        text: "这盒[便当]里发现一张垃圾纸，\\我当场[拍照]，\\希望你们[严肃对待]。"
        emotion: 😨
        gesture: 🤙
        topic: hygiene
    response_options:
      - speech_id: 44
        keywords:
          - keyword: 便当
            options:
              - id: 220
                kind: objection
                summary: 不可能脏
              - id: 0
                kind: agreement
                summary: 立即处理
              - id: 221
                kind: question
                summary: 哪件餐具
              - id: 102
                kind: agreement
                summary: 现场换餐并免单
      - speech_id: 77
        keywords:
          - keyword: 便当
            options:
              - id: 219
                kind: agreement
                summary: 立即更换
              - id: 83
                kind: agreement
                summary: 现场道歉并处理
          - keyword: 拍照
            options:
              - id: 90
                kind: question
                summary: 需要现场证据吗？
              - id: 219
                kind: agreement
                summary: 立即更换
          - keyword: 严肃对待
            options:
              - id: 106
                kind: agreement
                summary: 回收并检验可疑批次
              - id: 221
                kind: question
                summary: 哪件餐具
              - id: 83
                kind: agreement
                summary: 现场道歉并处理
    selected_response:
      speech_id: 77
      keyword_idx: 1
      option_idx: 7
    manager_speeches:
      - id: 219
        summary: 立即更换
        text: "非常抱歉，\\这是我们的疏忽，\\马上为您更换一套干净的餐具。"
        emotion: 😰
    impact:
      reputation_score: 0.5
      mood_change: 0.05
      trust_change: 0.025
      patience_change: 1
    continuation_decision: true
  - turn_number: 2
    diner_speeches:
      - id: 23
        text: "你们的餐具有点[破损]，\\碗边有裂痕，用起来很不安全，\\能不能检查并替换？"
        emotion: 😱
        gesture: 👎
        topic: tableware
    response_options:
      - speech_id: 23
        keywords:
          - keyword: 破损
            options:
              - id: 33
                kind: question
                summary: 是否接受替代菜？
              - id: 188
                kind: objection
                summary: 不严重
              - id: 219
                kind: agreement
                summary: 立即更换
    selected_response:
      speech_id: 23
      keyword_idx: 0
      option_idx: 2
    manager_speeches:
      - id: 219
        summary: 立即更换
        text: "非常抱歉，\\这是我们的疏忽，\\马上为您更换一套干净的餐具。"
        emotion: 😰
    impact:
      reputation_score: 0.5
      mood_change: 0.05
      trust_change: 0.025
      patience_change: 1
    continuation_decision: false
final_state:
  total_turns: 2
  asked_questions:
    - 44
    - 77
    - 23
  continuation_depth: 0
