crates/dishaster-trial/tests/snapshots/trial__dcda5b94829765e3.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 15914132926671316451
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 53
        text: "我点的[甜点]有异物，\\像塑料碎片一样，\\这太可怕了。"
        emotion: 😰
        gesture: 👍
        topic: hygiene
    response_options:
      - speech_id: 53
        keywords:
          - keyword: 甜点
            options:
              - id: 5
                kind: agreement
                summary: 立刻下架
              - id: 301
                kind: question
                summary: 嫉妒了？
              - id: 219
                kind: agreement
                summary: 立即更换
    selected_response:
      speech_id: 53
      keyword_idx: 0
      option_idx: 1
    manager_speeches:
      - id: 301
        summary: 嫉妒了？
        text: "您是觉得别人不该吃，\\还是自己舍不得花钱？"
        emotion: 🤨
        gesture: 👉
    impact:
      reputation_score: -0.5
      mood_change: -0.05
      trust_change: -0.025
      patience_change: -1
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 53
  continuation_depth: 0
